取水量更新APIを実装
